source/arduino/astronomy.h


typedef enum
{
    ASTRO_SUCCESS,                  
    ASTRO_NOT_INITIALIZED,          
    ASTRO_INVALID_BODY,             
    ASTRO_NO_CONVERGE,              
    ASTRO_BAD_TIME,                 
    ASTRO_BAD_VECTOR,               
    ASTRO_SEARCH_FAILURE,           
    ASTRO_EARTH_NOT_ALLOWED,        
    ASTRO_NO_MOON_QUARTER,          
    ASTRO_WRONG_MOON_QUARTER,       
    ASTRO_INTERNAL_ERROR,           
    ASTRO_INVALID_PARAMETER,        
    ASTRO_FAIL_APSIS,               
    ASTRO_BUFFER_TOO_SMALL,         
    ASTRO_OUT_OF_MEMORY,            
    ASTRO_INCONSISTENT_TIMES        
}
astro_status_t;
typedef struct
{
    double ut;
    double tt;
    double psi;
    double eps;
    double st;
}
astro_time_t;
typedef struct
{
    int     year;       
    int     month;      
    int     day;        
    int     hour;       
    int     minute;     
    double  second;     
}
astro_utc_t;
typedef struct
{
    astro_status_t status;  
    double x;               
    double y;               
    double z;               
    astro_time_t t;         
}
astro_vector_t;
typedef struct
{
    astro_status_t status;  
    double x;               
    double y;               
    double z;               
    double vx;              
    double vy;              
    double vz;              
    astro_time_t t;         
}
astro_state_vector_t;
typedef struct
{
    astro_status_t status;  
    double lat;             
    double lon;             
    double dist;            
}
astro_spherical_t;
typedef struct
{
    astro_status_t status;  
    double angle;           
}
astro_angle_result_t;
typedef enum
{
    BODY_INVALID = -1,      
    BODY_MERCURY,           
    BODY_VENUS,             
    BODY_EARTH,             
    BODY_MARS,              
    BODY_JUPITER,           
    BODY_SATURN,            
    BODY_URANUS,            
    BODY_NEPTUNE,           
    BODY_PLUTO,             
    BODY_SUN,               
    BODY_MOON,              
    BODY_EMB,               
    BODY_SSB,               
    BODY_STAR1 = 101,       
    BODY_STAR2,             
    BODY_STAR3,             
    BODY_STAR4,             
    BODY_STAR5,             
    BODY_STAR6,             
    BODY_STAR7,             
    BODY_STAR8,             
}
astro_body_t;
typedef struct
{
    double latitude;        
    double longitude;       
    double height;          
}
astro_observer_t;
typedef struct
{
    astro_status_t status;  
    double ra;              
    double dec;             
    double dist;            
    astro_vector_t vec;     
}
astro_equatorial_t;
typedef struct
{
    astro_status_t status;  
    astro_vector_t vec;     
    double elat;            
    double elon;            
}
astro_ecliptic_t;
typedef struct
{
    double azimuth;     
    double altitude;    
    double ra;          
    double dec;         
}
astro_horizon_t;
typedef enum
{
    REFRACTION_NONE,    
    REFRACTION_NORMAL,  
    REFRACTION_JPLHOR   
}
astro_refraction_t;
typedef struct
{
    astro_status_t  status;     
    astro_time_t    time;       
}
astro_search_result_t;
typedef struct
{
    astro_status_t  status;     
    int             quarter;    
    astro_time_t    time;       
}
astro_moon_quarter_t;
typedef struct
{
    astro_status_t status;      
    double value;               
}
astro_func_result_t;
typedef astro_func_result_t (* astro_search_func_t) (void *context, astro_time_t time);
typedef double (* astro_deltat_func) (double ut);
double Astronomy_DeltaT_EspenakMeeus(double ut);
double Astronomy_DeltaT_JplHorizons(double ut);
void Astronomy_SetDeltaTFunction(astro_deltat_func func);
typedef struct
{
    astro_status_t      status;                 
    astro_time_t        time;                   
    astro_visibility_t  visibility;             
    double              elongation;             
    double              ecliptic_separation;    
}
astro_elongation_t;
typedef struct
{
    astro_status_t          status;         
    astro_eclipse_kind_t    kind;           
    double                  obscuration;    
    astro_time_t            peak;           
    double                  sd_penum;       
    double                  sd_partial;     
    double                  sd_total;       
}
astro_lunar_eclipse_t;
typedef enum
{
    ABERRATION,     
    NO_ABERRATION   
}
astro_aberration_t;
typedef enum
{
    EQUATOR_J2000,      
    EQUATOR_OF_DATE     
}
astro_equator_date_t;
typedef enum
{
    TIME_FORMAT_DAY,    
    TIME_FORMAT_MINUTE, 
    TIME_FORMAT_SECOND, 
    TIME_FORMAT_MILLI   
}
astro_time_format_t;
typedef struct
{
    double elat;                
    double elon;                
    double mlat;                
    double mlon;                
    double dist_km;             
    double diam_deg;            
}
astro_libration_t;
typedef struct
{
    astro_state_vector_t io;        
    astro_state_vector_t europa;    
    astro_state_vector_t ganymede;  
    astro_state_vector_t callisto;  
}
astro_jupiter_moons_t;
typedef enum
{
    INVALID_NODE    =  0,   
    ASCENDING_NODE  = +1,   
    DESCENDING_NODE = -1    
}
astro_node_kind_t;
void Astronomy_Reset(void);
double Astronomy_VectorLength(astro_vector_t vector);
astro_angle_result_t Astronomy_AngleBetween(astro_vector_t a, astro_vector_t b);
const char *Astronomy_BodyName(astro_body_t body);
astro_body_t Astronomy_BodyCode(const char *name);
astro_observer_t Astronomy_MakeObserver(double latitude, double longitude, double height);
astro_time_t Astronomy_CurrentTime(void);
astro_time_t Astronomy_MakeTime(int year, int month, int day, int hour, int minute, double second);
astro_time_t Astronomy_TimeFromUtc(astro_utc_t utc);
astro_utc_t  Astronomy_UtcFromTime(astro_time_t time);
astro_status_t Astronomy_FormatTime(astro_time_t time, astro_time_format_t format, char *text, size_t size);
astro_time_t Astronomy_TimeFromDays(double ut);
astro_time_t Astronomy_TerrestrialTime(double tt);
astro_time_t Astronomy_AddDays(astro_time_t time, double days);
double Astronomy_SiderealTime(astro_time_t *time);
astro_func_result_t Astronomy_HelioDistance(astro_body_t body, astro_time_t time);
astro_vector_t Astronomy_HelioVector(astro_body_t body, astro_time_t time);
astro_vector_t Astronomy_GeoVector(astro_body_t body, astro_time_t time, astro_aberration_t aberration);
astro_vector_t Astronomy_GeoMoon(astro_time_t time);
astro_spherical_t Astronomy_EclipticGeoMoon(astro_time_t time);
astro_state_vector_t Astronomy_GeoMoonState(astro_time_t time);
astro_state_vector_t Astronomy_GeoEmbState(astro_time_t time);
astro_libration_t Astronomy_Libration(astro_time_t time);
astro_state_vector_t Astronomy_BaryState(astro_body_t body, astro_time_t time);
astro_state_vector_t Astronomy_HelioState(astro_body_t body, astro_time_t time);
double Astronomy_MassProduct(astro_body_t body);
double Astronomy_PlanetOrbitalPeriod(astro_body_t body);
astro_state_vector_t Astronomy_LagrangePoint(
    int point,
    astro_time_t time,
    astro_body_t major_body,
    astro_body_t minor_body
);
astro_state_vector_t Astronomy_LagrangePointFast(
    int point,
    astro_state_vector_t major_state,
    double major_mass,
    astro_state_vector_t minor_state,
    double minor_mass
);
astro_jupiter_moons_t Astronomy_JupiterMoons(astro_time_t time);
astro_equatorial_t Astronomy_Equator(
    astro_body_t body,
    astro_time_t *time,
    astro_observer_t observer,
    astro_equator_date_t equdate,
    astro_aberration_t aberration
);
astro_vector_t Astronomy_ObserverVector(
    astro_time_t *time,
    astro_observer_t observer,
    astro_equator_date_t equdate
);
astro_state_vector_t Astronomy_ObserverState(
    astro_time_t *time,
    astro_observer_t observer,
    astro_equator_date_t equdate
);
astro_observer_t Astronomy_VectorObserver(astro_vector_t *vector, astro_equator_date_t equdate);
double Astronomy_ObserverGravity(double latitude, double height);
astro_ecliptic_t Astronomy_SunPosition(astro_time_t time);
astro_ecliptic_t Astronomy_Ecliptic(astro_vector_t eqj);
astro_angle_result_t Astronomy_EclipticLongitude(astro_body_t body, astro_time_t time);
astro_horizon_t Astronomy_Horizon(
    astro_time_t *time,
    astro_observer_t observer,
    double ra,
    double dec,
    astro_refraction_t refraction);
astro_angle_result_t Astronomy_AngleFromSun(astro_body_t body, astro_time_t time);
astro_elongation_t Astronomy_Elongation(astro_body_t body, astro_time_t time);
astro_elongation_t Astronomy_SearchMaxElongation(astro_body_t body, astro_time_t startTime);
astro_angle_result_t Astronomy_PairLongitude(astro_body_t body1, astro_body_t body2, astro_time_t time);
astro_search_result_t Astronomy_SearchRelativeLongitude(astro_body_t body, double targetRelLon, astro_time_t startTime);
astro_angle_result_t Astronomy_MoonPhase(astro_time_t time);
astro_search_result_t Astronomy_SearchMoonPhase(double targetLon, astro_time_t startTime, double limitDays);
astro_moon_quarter_t Astronomy_SearchMoonQuarter(astro_time_t startTime);
astro_moon_quarter_t Astronomy_NextMoonQuarter(astro_moon_quarter_t mq);
astro_lunar_eclipse_t Astronomy_SearchLunarEclipse(astro_time_t startTime);
astro_search_result_t Astronomy_Search(
    astro_search_func_t func,
    void *context,
    astro_time_t t1,
    astro_time_t t2,
    double dt_tolerance_seconds);