source/pascal/Astronomy.pas


  // Holds the positions and velocities of Jupiter's major 4 moons.
  AstroJupiterMoons = packed record
    IO: AstroStateVector;       // Jovicentric position and velocity of Io.
    Europa: AstroStateVector;   // Jovicentric position and velocity of Europa.
    Ganymede: AstroStateVector; // Jovicentric position and velocity of Ganymede.
    Callisto: AstroStateVector; // Jovicentric position and velocity of Callisto.
  end;

  // Information about an ascending or descending node of a body.
  AstroNodeEvent = packed record
    Status: AstroStatus; // `ASTRO_SUCCESS` if this struct is valid; otherwise an error code.
    Time: AstroTime;     // The time when the body passes through the ecliptic plane.
    Kind: AstroNodeKind; // Either `ASCENDING_NODE` or `DESCENDING_NODE`, depending on the direction of the ecliptic plane crossing.
  end;

  // A data type used for managing simulation of the gravitational forces on a small body.
  AstroGravSim = packed record
  end;

  // Pointer to `AstroGravSim` record.
  PAstroGravSim = ^AstroGravSim;

  // A pointer to a function that is to be passed as a callback to #Astronomy_Search.
  PAstroSearchFunc = function(Context: Pointer; Time: AstroTime): AstroFuncResult; cdecl;

  // A pointer to a function that calculates Delta T.
  PAstroDeltaTFunc = function(UT: Double): Double; cdecl;

  // A pointer to a function for which to solve a light-travel time problem.
  PAstroPositionFunc = function(Context: Pointer; Time: AstroTime): AstroVector; cdecl;

  // The default Delta T function used by Astronomy Engine.
  function Astronomy_DeltaT_EspenakMeeus(UT: Double): Double; cdecl; external LibraryName;

  // A Delta T function that approximates the one used by the JPL Horizons tool
  function Astronomy_DeltaT_JplHorizons(UT: Double): Double; cdecl; external LibraryName;

  // Changes the function Astronomy Engine uses to calculate Delta T.
  procedure Astronomy_SetDeltaTFunction(Func: PAstroDeltaTFunc); cdecl; external LibraryName;

  // Frees up all dynamic memory allocated by Astronomy Engine.
  procedure Astronomy_Reset(); cdecl; external LibraryName;

  // Calculates the length of the given vector. The returned length is expressed usually in AU.
  function Astronomy_VectorLength(Vector: AstroVector): Double; cdecl; external LibraryName;

  // Calculates the angle between two vectors. The returned angle is expressed in degrees.
  function Astronomy_AngleBetween(A: AstroVector; B: AstroVector): AstroAngleResult; cdecl; external LibraryName;

  // Finds the name of a celestial body.
  function Astronomy_BodyName(Body: AstroBody): PChar; cdecl; external LibraryName;

{ Returns the #AstroBody value corresponding to the given English name.
  Valid parameter values are one of: Sun, Moon, Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, Neptune, Pluto, EMB, SSB. }
  function Astronomy_BodyCode(Name: PChar): AstroBody; cdecl; external LibraryName;

  // Creates an observer object that represents a location on or near the surface of the Earth.
  function Astronomy_MakeObserver(Latitude: Double; Longitude: Double; Height: Double): AstroObserver; cdecl; external LibraryName;

  // Returns the computer's current date and time in the form of an #AstroTime.
  function Astronomy_CurrentTime(): AstroTime; cdecl; external LibraryName;

  // Creates an #AstroTime value from a given calendar date and time.
  function Astronomy_MakeTime(Year: Int32; Month: Int32; Day: Int32; Hour: Int32; Minute: Int32; Second: Double): AstroTime; cdecl; external LibraryName;

  // Creates an #AstroTime value from a given calendar date and time.
  function Astronomy_TimeFromUtc(UTC: AstroUTC): AstroTime; cdecl; external LibraryName;

  // Determines the calendar year, month, day and time from an #AstroTime value.
  function Astronomy_UtcFromTime(Time: AstroTime): AstroUTC; cdecl; external LibraryName;

  // Formats an #AstroTime value as an ISO 8601 string.
  function Astronomy_FormatTime(Time: AstroTime; Format: AstroTimeFormat; Text: PChar; Size: Int64): AstroStatus; cdecl; external LibraryName;

  // Converts a J2000 day value to an #AstroTime value.
  function Astronomy_TimeFromDays(UT: Double): AstroTime; cdecl; external LibraryName;

  // Converts a terrestrial time value into an #AstroTime value.
  function Astronomy_TerrestrialTime(TT: Double): AstroTime; cdecl; external LibraryName;

  // Calculates the sum or difference of an #AstroTime with a specified floating point number of days.
  function Astronomy_AddDays(Time: AstroTime; Days: Double): AstroTime; cdecl; external LibraryName;

  // Calculates Greenwich Apparent Sidereal Time (GAST) and returns in sidereal hours.
  function Astronomy_SiderealTime(Time: PAstroTime): Double; cdecl; external LibraryName;

  // Calculates the distance from a body to the Sun at a given time.
  function Astronomy_HelioDistance(Body: AstroBody; Time: AstroTime): AstroFuncResult; cdecl; external LibraryName;

  // Calculates heliocentric Cartesian coordinates of a body in the J2000 equatorial system.
  function Astronomy_HelioVector(Body: AstroBody; Time: AstroTime): AstroVector; cdecl; external LibraryName;

  // Calculates geocentric Cartesian coordinates of a body in the J2000 equatorial system.
  function Astronomy_GeoVector(Body: AstroBody; Time: AstroTime; Aberration: AstroAberration): AstroVector; cdecl; external LibraryName;

  // Calculates equatorial geocentric position of the Moon at a given time in the J2000 equatorial system.
  function Astronomy_GeoMoon(Time: AstroTime): AstroVector; cdecl; external LibraryName;

  // Calculates spherical ecliptic geocentric postition of the Moon in the equatorial system of date.
  function Astronomy_EclipticGeoMoon(Time: AstroTime): AstroSpherical; cdecl; external LibraryName;

  // Calculates equatorial geocentric postition of the Moon at a given time in the J2000 equatorial system.
  function Astronomy_GeoMoonState(Time: AstroTime): AstroStateVector; cdecl; external LibraryName;

  // Calculates the geocentric position and velocity of the Earth/Moon barycenter in the J2000 equatorial system.
  function Astronomy_GeoEmbState(Time: AstroTime): AstroStateVector; cdecl; external LibraryName;

  // Calculates the Moon's libration angles at a given moment in time.
  function Astronomy_Libration(Time: AstroTime): AstroLibration; cdecl; external LibraryName;

  // Calculates barycentric position and velocity vectors for the given body (everything except stars).
  function Astronomy_BaryState(Body: AstroBody; Time: AstroTime): AstroStateVector; cdecl; external LibraryName;

  // Calculates heliocentric position and velocity vectors for the given body (including stars).
  function Astronomy_HelioState(Body: AstroBody; Time: AstroTime): AstroStateVector; cdecl; external LibraryName;

  // Returns the product of mass and universal gravitational constant of a Solar System body.
  function Astronomy_MassProduct(Body: AstroBody): Double; cdecl; external LibraryName;

  // Returns the average number of days it takes for a planet to orbit the Sun.
  function Astronomy_PlanetOrbitalPeriod(Body: AstroBody): Double; cdecl; external LibraryName;

  // Calculates one of the 5 Lagrange points for a pair of co-orbiting bodies.
  function Astronomy_LagrangePoint(Point: Int32; Time: AstroTime; MajorBody: AstroBody; MinorBody: AstroBody): AstroStateVector; cdecl; external LibraryName;

  // Calculates one of the 5 Lagrange points from body masses and state vectors.
  function Astronomy_LagrangePointFast(Point: Int32; MajorState: AstroStateVector; MajorMass: Double; MinorState: AstroStateVector; MinorMass: Double): AstroStateVector; cdecl; external LibraryName;

  // Calculates joviocentric positions and velocities of Jupiter's largest 4 moons.
  function Astronomy_JupiterMoons(Time: AstroTime): AstroJupiterMoons; cdecl; external LibraryName;

  // Calculates equatorial coordinates of a celestial body as seen by an observer on the Earth's surface.
  function Astronomy_Equator(Body: AstroBody; Time: PAstroTime; Observer: AstroObserver; EquDate: AstroEquatorDate; Aberration: AstroAberration): AstroEquatorial; cdecl; external LibraryName;

  // Calculates geocentric equatorial coordinates of an observer on the surface of the Earth.
  function Astronomy_ObserverVector(Time: PAstroTime; Observer: AstroObserver; EquDate: AstroEquatorDate): AstroVector; cdecl; external LibraryName;

  // Calculates geocentric equatorial postition and velocity of an observer on the surface of the Earth.
  function Astronomy_ObserverState(Time: PAstroTime; Observer: AstroObserver; EquDate: AstroEquatorDate): AstroStateVector; cdecl; external LibraryName;

  // Calculates the geographic location corresponding to an equatorial vector.
  function Astronomy_VectorObserver(Vector: PAstroVector; EquDate: AstroEquatorDate): AstroObserver; cdecl; external LibraryName;

  // Calculates the gravitational acceleration experienced by an observer on the Earth and returns acceleration expressed in meters per second squared.
  function Astronomy_ObserverGravity(Latitude: Double; Height: Double): Double; cdecl; external LibraryName;

  // Calculates geocentric ecliptic coordinates for the Sun.
  function Astronomy_SunPosition(Time: AstroTime): AstroEcliptic; cdecl; external LibraryName;

  // Converts a J2000 mean equator (EQJ) vector to a true ecliptic of date (ETC) vector and angles.
  function Astronomy_Ecliptic(EQJ: AstroVector): AstroEcliptic; cdecl; external LibraryName;

  // Calculates heliocentric ecliptic longitude of a body.
  function Astronomy_EclipticLongitude(Body: AstroBody; Time: AstroTime): AstroAngleResult; cdecl; external LibraryName;

  // Calculates the apparent location of a body relative to the local horizon of an observer on the Earth.
  function Astronomy_Horizon(Time: PAstroTime; Observer: AstroObserver; RA: Double; Dec: Double; Refraction: AstroRefraction): AstroHorizon; cdecl; external LibraryName;

  // Returns the angle between the given body and the Sun, as seen from the Earth.
  function Astronomy_AngleFromSun(Body: AstroBody; Time: AstroTime): AstroAngleResult; cdecl; external LibraryName;

  // Determins visibility of a celestial body realtive to the Sun, as seen from the Earth.
  function Astronomy_Elongation(Body: AstroBody; Time: AstroTime): AstroElongation; cdecl; external LibraryName;

  // Finds a date and time when Mercury or Venus reaches its maximum angle from the Sun as seen from the Earth.
  function Astronomy_SearchMaxElongation(Body: AstroBody; StartTime: AstroTime): AstroElongation; cdecl; external LibraryName;

  // Returns one body's ecliptic longitude with respect to another, as seen from Earth.
  function Astronomy_PairLongitude(Body1: AstroBody; Body2: AstroBody; Time: AstroTime): AstroAngleResult; cdecl; external LibraryName;

  // Searches for the time when the Earth and another planet are separated by a specified angle in eclipctic longitude, as seen from the Sun.
  function Astronomy_SearchRelativeLongitude(Body: AstroBody; TargetRelLon: Double; StartTime: AstroTime): AstroSearchResult; cdecl; external LibraryName;

  // Returns the Moon's phase as an angle from 0 to 360 degrees.
  function Astronomy_MoonPhase(Time: AstroTime): AstroAngleResult; cdecl; external LibraryName;

  // Searches for the time that the Moon reaches a specified phase.
  function Astronomy_SearchMoonPhase(TargetLon: Double; StartTime: AstroTime; LimitDays: Double): AstroSearchResult; cdecl; external LibraryName;

  // Finds the first lunar quarter after the specified date and time.
  function Astronomy_SearchMoonQuarter(StartTime: AstroTime): AstroMoonQuarter; cdecl; external LibraryName;

  // Continues searching for lunar quarters from previous search.
  function Astronomy_NextMoonQuarter(MQ: AstroMoonQuarter): AstroMoonQuarter; cdecl; external LibraryName;

  // Searches for a lunar eclipse.
  function Astronomy_SearchLunarEclipse(StartTime: AstroTime): AstroLunarEclipse; cdecl; external LibraryName;
